# semantic-search-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  Untitled.ipynb  pyproject.toml  run_development.sh  run_production.sh  semantic-cache-search-engine.ipynb  semantic_search_engine.ipynb
backend/: pyproject.toml
backend/app/: main.py  websocket.py
backend/app/models/: query.py  response.py
backend/app/services/: cache_service.py  qdrant_service.py  rag_service.py  router_service.py  web_search_service.py
backend/app/utils/: config.py  embeddings.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  setupProxy.js
frontend/src/components/: ResultsDisplay.jsx  SearchInterface.jsx  ToggleSwitch.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/utils/: api.js
